--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Elizabeth Goff <span>Software Engineer</span></a></div>
+				<div class="logo"><a href="#">Elizabeth Goff</a></div>
 			</header>
 
 		<!-- Main -->
@@ -29,12 +29,12 @@
 							<img src="images/pic02.jpg" alt="" />
 						</div>
 						<header class="special">
-							<h2>Fringilla Fermentum Tellus</h2>
-							<p>vehicula urna sed justo bibendum</p>
+							<h2>Elizabeth Goff</h2>
+							<p>Full Stack Software Engineer</p>
 						</header>
 						<div class="content">
-							<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel. Vestibulum et efficitur urna. Duis velit nulla, interdum sed felis sit amet, facilisis auctor nunc. Cras luctus urna at risus feugiat scelerisque nec sed diam. </p>
-							<p>Nunc fringilla metus odio, at rutrum augue tristique vel. Nulla ac tellus a neque ullamcorper porta a vitae ipsum. Morbi est sapien, hendrerit quis mi in, aliquam bibendum orci. Vestibulum imperdiet nibh vitae maximus posuere. Aenean sit amet nibh feugiat, condimentum tellus eu, malesuada nunc. Mauris ac pulvinar turpis, sit amet pharetra est. Ut bibendum justo condimentum, vehicula ex vel, venenatis libero. Etiam vehicula urna sed justo bibendum, ac lacinia nunc pulvinar. Integer nec velit orci. Vestibulum pellentesque varius dapibus. Morbi ullamcorper augue est, sed luctus orci fermentum dictum. Nunc tincidunt, nisl consequat convallis viverra, metus nisl ultricies dui, vitae dapibus ligula urna sit amet nibh. Duis ut venenatis enim.</p>
+							<p>As a stoneware artist and software engineer, I have the opportunity to enhance space visually and bring out the true potential of the expression that is brought forth. I not only have the privilege of creating the actual designs, but also help sculpt a person’s vision and bring it to life. Bringing my clients’ uniqueness that helps them stand out of the crowd is something I truly enjoy.</p>
+							<p>I have been a professional artist for the last 10 years, operating all aspects of Living Earth Creations Inc. Prior to that, I had 20 years of experience in management as well as business. Now, as a Full Stack Software Engineer, I have experience in HTML, CSS, React, Redux, Material-UI, Axios, JavaScript, jQuery, Postico, postgresSQL, NodeJS, Express, Visual Studio Code, Atom, AJAX, AngularJS, Angular Material, Bootstrap, MongoDB, Robo3T, Trello, Postman, Mocha, Chai, GitHub, Git, and Heroku. That being said, I am also experienced in product development, product photography and branding, marketing, design, guest service, public speaking, teaching, training, sales growth, profit and loss, labor and inventory management, operations, crisis management, quality control, sales, and much more.</p>
 						</div>
 					</section>
 
