--- a/index.html
+++ b/index.html
@@ -5,120 +5,173 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Elizabeth Goff</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="logo"><a href="#">Elizabeth Goff</a></div>
-			</header>
+<head>
+	<title>Elizabeth Goff</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-		<!-- Main -->
-			<section id="main">
-				<div class="inner">
+<body>
 
-				<!-- One -->
-					<section id="one" class="wrapper style1">
+	<!-- Header -->
+	<header id="header">
+		<div class="logo">
+			<a href="#">Elizabeth Goff</a>
+		</div>
+	</header>
 
-						<div class="image fit flush">
-							<img src="images/pic02.jpg" alt="" />
-						</div>
-						<header class="special">
-							<h2>Elizabeth Goff</h2>
-							<p>Full Stack Software Engineer</p>
-						</header>
-						<div class="content">
-							<p>As a stoneware artist and software engineer, I have the opportunity to enhance space visually and bring out the true potential of the expression that is brought forth. I not only have the privilege of creating the actual designs, but also help sculpt a person’s vision and bring it to life. Bringing my clients’ uniqueness that helps them stand out of the crowd is something I truly enjoy.</p>
-							<p>I have been a professional artist for the last 10 years, operating all aspects of Living Earth Creations Inc. Prior to that, I had 20 years of experience in management as well as business. Now, as a Full Stack Software Engineer, I have experience in HTML, CSS, React, Redux, Material-UI, Axios, JavaScript, jQuery, Postico, postgresSQL, NodeJS, Express, Visual Studio Code, Atom, AJAX, AngularJS, Angular Material, Bootstrap, MongoDB, Robo3T, Trello, Postman, Mocha, Chai, GitHub, Git, and Heroku. That being said, I am also experienced in product development, product photography and branding, marketing, design, guest service, public speaking, teaching, training, sales growth, profit and loss, labor and inventory management, operations, crisis management, quality control, sales, and much more.</p>
-						</div>
-					</section>
+	<!-- Main -->
+	<section id="main">
+		<div class="inner">
 
-				<!-- Two -->
-					<section id="two" class="wrapper style2">
-						<header>
-							<h2>Vestibulum Convallis</h2>
-							<p>vehicula urna sed justo bibendum</p>
-						</header>
-						<div class="content">
-							<div class="gallery">
-								<div>
-									<div class="image fit flush">
-										<a href="images/pic03.jpg"><img src="images/pic03.jpg" alt="" /></a>
-									</div>
-								</div>
-								<div>
-									<div class="image fit flush">
-										<a href="images/pic01.jpg"><img src="images/pic01.jpg" alt="" /></a>
-									</div>
-								</div>
-								<div>
-									<div class="image fit flush">
-										<a href="images/pic04.jpg"><img src="images/pic04.jpg" alt="" /></a>
-									</div>
-								</div>
-								<div>
-									<div class="image fit flush">
-										<a href="images/pic05.jpg"><img src="images/pic05.jpg" alt="" /></a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</section>
+			<!-- One -->
+			<section id="one" class="wrapper style1">
 
-				<!-- Three -->
-					<section id="three" class="wrapper">
-						<div class="spotlight">
-							<div class="image flush"><img src="images/pic06.jpg" alt="" /></div>
-							<div class="inner">
-								<h3>Viverra Hendrerit</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
-							</div>
-						</div>
-						<div class="spotlight alt">
-							<div class="image flush"><img src="images/pic07.jpg" alt="" /></div>
-							<div  class="inner">
-								<h3>Curabitur Eget</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
-							</div>
-						</div>
-						<div class="spotlight">
-							<div class="image flush"><img src="images/pic08.jpg" alt="" /></div>
-							<div class="inner">
-								<h3>Morbi Eleifend</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
-							</div>
-						</div>
-					</section>
-
+				<div class="image fit flush">
+					<img src="images/pic02.jpg" alt="" />
+				</div>
+				<header class="special">
+					<h2>Elizabeth Goff</h2>
+					<p>Full Stack Software Engineer</p>
+				</header>
+				<div class="content">
+					<p>As a stoneware artist and software engineer, I have the opportunity to enhance space visually and bring out the true
+						potential of the expression that is brought forth. I not only have the privilege of creating the actual designs, but
+						also help sculpt a person’s vision and bring it to life. Bringing my clients’ uniqueness that helps them stand out
+						of the crowd is something I truly enjoy.</p>
+					<p>I have been a professional artist for the last 10 years, operating all aspects of Living Earth Creations Inc. Prior
+						to that, I had 20 years of experience in management as well as business. Now, as a Full Stack Software Engineer, I
+						have experience in HTML, CSS, React, Redux, Material-UI, Axios, JavaScript, jQuery, Postico, postgresSQL, NodeJS, Express,
+						Visual Studio Code, Atom, AJAX, AngularJS, Angular Material, Bootstrap, MongoDB, Robo3T, Trello, Postman, Mocha, Chai,
+						GitHub, Git, and Heroku. That being said, I am also experienced in product development, product photography and branding,
+						marketing, design, guest service, public speaking, teaching, training, sales growth, profit and loss, labor and inventory
+						management, operations, crisis management, quality control, sales, and much more.</p>
 				</div>
 			</section>
 
-		<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
+			<!-- Two -->
+			<section id="three" class="wrapper">
+				<div class="spotlight">
+					<div class="image flush">
+						<img src="images/pic06.jpg" alt="" />
+					</div>
+					<div class="inner">
+						<h3>MSP TechHire</h3>
+						<p>This full stack application for MSP TechHire is for tracking data of partners in their program to be used for reports, fundraising, and analyzing the success rate of the program.
+							In working with MSP TechHire we helped our client with public facing visibility, design, as well as the database structures, and functionality.
+							This has been an exciting opportunity to help the cities of Minneapolis and Saint Paul. </p>
+					</div>
 				</div>
-				<div class="copyright">
-					&copy; Untitled. All rights reserved. Images <a href="https://unsplash.com">Unsplash</a> Design <a href="https://templated.co">TEMPLATED</a>
+				<div class="spotlight alt">
+					<div class="image flush">
+						<img src="images/pic07.jpg" alt="" />
+					</div>
+					<div class="inner">
+						<h3>Curabitur Eget</h3>
+						<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis
+							viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus
+							imperdiet vel.</p>
+					</div>
 				</div>
-			</footer>
+				<div class="spotlight">
+					<div class="image flush">
+						<img src="images/pic08.jpg" alt="" />
+					</div>
+					<div class="inner">
+						<h3>Morbi Eleifend</h3>
+						<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis
+							viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus
+							imperdiet vel.</p>
+					</div>
+				</div>
+			</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		</div>
+	</section>
 
-	</body>
+	<!-- Three -->
+	<section id="two" class="wrapper style2">
+		<header>
+			<h2>Vestibulum Convallis</h2>
+			<p>vehicula urna sed justo bibendum</p>
+		</header>
+		<div class="content">
+			<div class="gallery">
+				<div>
+					<div class="image fit flush">
+						<a href="images/pic03.jpg">
+							<img src="images/pic03.jpg" alt="" />
+						</a>
+					</div>
+				</div>
+				<div>
+					<div class="image fit flush">
+						<a href="images/pic01.jpg">
+							<img src="images/pic01.jpg" alt="" />
+						</a>
+					</div>
+				</div>
+				<div>
+					<div class="image fit flush">
+						<a href="images/pic04.jpg">
+							<img src="images/pic04.jpg" alt="" />
+						</a>
+					</div>
+				</div>
+				<div>
+					<div class="image fit flush">
+						<a href="images/pic05.jpg">
+							<img src="images/pic05.jpg" alt="" />
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="container">
+			<ul class="icons">
+				<li>
+					<a href="#" class="icon fa-twitter">
+						<span class="label">Twitter</span>
+					</a>
+				</li>
+				<li>
+					<a href="#" class="icon fa-facebook">
+						<span class="label">Facebook</span>
+					</a>
+				</li>
+				<li>
+					<a href="#" class="icon fa-instagram">
+						<span class="label">Instagram</span>
+					</a>
+				</li>
+				<li>
+					<a href="#" class="icon fa-envelope-o">
+						<span class="label">Email</span>
+					</a>
+				</li>
+			</ul>
+		</div>
+		<div class="copyright">
+			&copy; Untitled. All rights reserved. Images
+			<a href="https://unsplash.com">Unsplash</a> Design
+			<a href="https://templated.co">TEMPLATED</a>
+		</div>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.poptrox.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
