added a new photo and description

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<p>Full Stack Software Engineer</p>
 				</header>
 				<div class="content">
-					<p>As a stoneware artist and software engineer, I have the opportunity to enhance space visually and bring out the true
+					<p>As a software engineer and stoneware artist, I have the opportunity to enhance space visually and bring out the true
 						potential of the expression that is brought forth. I not only have the privilege of creating the actual designs, but
 						also help sculpt a person’s vision and bring it to life. Bringing my clients’ uniqueness that helps them stand out
 						of the crowd is something I truly enjoy.</p>
@@ -69,10 +69,9 @@
 						<img src="images/pic07.jpg" alt="" />
 					</div>
 					<div class="inner">
-						<h3>Curabitur Eget</h3>
-						<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis
-							viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus
-							imperdiet vel.</p>
+						<h3>A Bit About Me</h3>
+						<p>One of the best things about being a Full Stack Software Engineer is the continual collaboration in the Tech Community.
+						I feel very lucky to be a part of such a dynamic, and ever changing field, where the people are so supportive and involved.</p>
 					</div>
 				</div>
 				<div class="spotlight">
