--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 					</div>
 					<div class="inner">
 						<h3>A Bit About Me</h3>
-						<p>One of the best things about being a Full Stack Software Engineer is the continual collaboration in the Tech Community.
-						I feel very lucky to be a part of such a dynamic, and ever changing field, where the people are so supportive and involved.</p>
+						<p>One of the best things about being a Full Stack Software Engineer is the continual collaboration in the tech community.
+						I feel very lucky to be a part of such a dynamic, and ever changing field, where the people are so supportive and involved. Each day I learn something new!</p>
 					</div>
 				</div>
 				<div class="spotlight">
@@ -79,10 +79,9 @@
 						<img src="images/pic08.jpg" alt="" />
 					</div>
 					<div class="inner">
-						<h3>Morbi Eleifend</h3>
-						<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis
-							viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus
-							imperdiet vel.</p>
+						<h3>Rosie's Resistance</h3>
+						<p>This solo project is a full stack application platform to help support women in each part of their daily lives. 
+							I am continuing work on this and plan to make this forum public within the next year. Keep an eye out for more news!</p>
 					</div>
 				</div>
 			</section>
