--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<img src="images/pic02.jpg" alt="" />
 				</div>
 				<header class="special">
-					<h2>Elizabeth Goff</h2>
+					<h2>Elizabeth Goff the Software Engineer</h2>
 					<p>Full Stack Software Engineer</p>
 				</header>
 				<div class="content">
@@ -69,7 +69,7 @@
 						<img src="images/pic07.jpg" alt="" />
 					</div>
 					<div class="inner">
-						<h3>A Bit About Me</h3>
+						<h3>Side Note</h3>
 						<p>One of the best things about being a Full Stack Software Engineer is the continual collaboration in the tech community.
 						I feel very lucky to be a part of such a dynamic, and ever changing field, where the people are so supportive and involved. Each day I learn something new!</p>
 					</div>
@@ -92,8 +92,8 @@
 	<!-- Three -->
 	<section id="two" class="wrapper style2">
 		<header>
-			<h2>Vestibulum Convallis</h2>
-			<p>vehicula urna sed justo bibendum</p>
+			<h2>Elizabeth Goff the Professional Artist</h2>
+			<p>Living Earth Creations Inc.</p>
 		</header>
 		<div class="content">
 			<div class="gallery">
