pottery pics added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</div>
 				<header class="special">
 					<h2>Elizabeth Goff the Software Engineer</h2>
-					<p>Full Stack Software Engineer</p>
+					<p>liz@elizabethgoff.com</p>
 				</header>
 				<div class="content">
 					<p>As a software engineer and stoneware artist, I have the opportunity to enhance space visually and bring out the true
@@ -43,7 +43,7 @@
 						of the crowd is something I truly enjoy.</p>
 					<p>I have been a professional artist for the last 10 years, operating all aspects of Living Earth Creations Inc. Prior
 						to that, I had 20 years of experience in management as well as business. Now, as a Full Stack Software Engineer, I
-						have experience in HTML, CSS, React, Redux, Material-UI, Axios, JavaScript, jQuery, Postico, postgresSQL, NodeJS, Express,
+						have experience in HTML, CSS, CSS Grid, React, Redux, Material-UI, Axios, JavaScript, jQuery, Postico, postgresSQL, NodeJS, Express,
 						Visual Studio Code, Atom, AJAX, AngularJS, Angular Material, Bootstrap, MongoDB, Robo3T, Trello, Postman, Mocha, Chai,
 						GitHub, Git, and Heroku. That being said, I am also experienced in product development, product photography and branding,
 						marketing, design, guest service, public speaking, teaching, training, sales growth, profit and loss, labor and inventory
